src-tauri/check_output.txt
    Checking anvil-craft v0.1.0 (D:\Usuarios\Luis Macias\Documentos\Proyectos\AnvilCraft\src-tauri)
warning: unused import: `PathBuf`
 --> src\commands\dev.rs:4:23
  |
4 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `chrono::Utc`
 --> src\commands\server.rs:2:5
  |
2 | use chrono::Utc;
  |     ^^^^^^^^^^^

warning: unused import: `InstanceEngine`
 --> src\commands\versions.rs:1:21
  |
1 | use crate::models::{InstanceEngine, InstanceInstallProgress};
  |                     ^^^^^^^^^^^^^^

error[E0599]: no method named `path` found for struct `AppHandle<R>` in the current scope
   --> src\commands\dev.rs:42:30
    |
 42 |     let binding = app_handle.path().app_config_dir().unwrap(); // Just to get a handle context, but we need relative path to project root
    |                              ^^^^ method not found in `AppHandle`
    |
   ::: C:\Users\luism\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.9.5\src\lib.rs:772:6
    |
772 |   fn path(&self) -> &crate::path::PathResolver<R> {
    |      ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `path` is implemented but not in scope; perhaps you want to import it
    |
  1 + use tauri::Manager;
    |

error[E0599]: no method named `flatten` found for enum `Result<ReadDir, std::io::Error>` in the current scope
   --> src\commands\server.rs:137:54
    |
137 |             for entry in fs::read_dir(instances_dir).flatten().flatten() {
    |                                                      ^^^^^^^ `Result<ReadDir, std::io::Error>` is not an iterator
    |
help: call `.into_iter()` first
    |
137 |             for entry in fs::read_dir(instances_dir).into_iter().flatten().flatten() {
    |                                                      ++++++++++++

error[E0282]: type annotations needed
   --> src\commands\server.rs:138:33
    |
138 |                 let json_path = entry.path().join("instance.json");
    |                                 ^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `anvil-craft` (lib) generated 3 warnings
error: could not compile `anvil-craft` (lib) due to 3 previous errors; 3 warnings emitted
